fix scrollbar to nowhere

--- a/main.css
+++ b/main.css
@@ -17,7 +17,6 @@ p, h1, h2, h3 {
 #menu {
   margin: 10px 10px;
   width: 100px;
-  height: 100%;
 }
 
 #twitter-button {
